syntax = "proto3";

package autokitteh.runtimes.v1;

import "autokitteh/runtimes/v1/runtime.proto";
import "buf/validate/validate.proto";

message DescribeRequest {
  string name = 1 [(buf.validate.field).string.min_len = 1];
}

message DescribeResponse {
  Runtime runtime = 1; // empty if not found.
}

message ListRequest {
  // TODO: fieldmask.
}

message ListResponse {
  repeated Runtime runtimes = 1 [(buf.validate.field).required = true];
}

// Runtimes are expected to be registered during deploy (from configuration).
// Dynamic registration of runtimes will not be supported.
service RuntimesService {
  rpc Describe(DescribeRequest) returns (DescribeResponse);

  rpc List(ListRequest) returns (ListResponse);
}
